<resources>
    <string name="app_name">Notes</string>

    <!-- NotesListFragment -->
    <string name="new_note">New Note</string>
    <string name="notify_list_empty">You don\'t have any notes saved</string>
    <plurals name="note_count">
        <item quantity="one">%d note saved</item>
        <item quantity="other">%d notes saved</item>
    </plurals>
    <string name="no_note_selected">No note was selected</string>
    <string name="import_successful">Import successful</string>

    <!-- note_list_fragment_menu -->
    <string name="settings">Settings</string>
    <string name="sort_order">Sort order</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="import_note">Import note</string>
    <string name="about">About</string>

    <!-- NoteFragment -->
    <string name="save">Save</string>
    <string name="note_text_hint">Write something</string>
    <string name="export_note">Export note</string>
    <string name="share_note">Share note</string>
    <string name="note_chooser_text">Send note via…</string>
    <string name="note_saved">Note saved</string>
    <string name="note_not_saved">Note was not saved</string>
    <string name="note_has_not_changed">Note was not modified</string>
    <string name="export_failed">Could not export note: %s</string>
    <string name="no_file_created">There was no file created</string>
    <string name="export_successful">Note exported successfully</string>

    <!-- Action Mode -->
    <string name="delete">Delete</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect All</string>

    <!-- Create/Rename Note Dialog -->
    <string name="notes_name">Note\'s name</string>
    <string name="note_exists">Note already exists</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="rename_note">Rename note</string>
    <string name="rename">Rename</string>

    <!-- Settings -->
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="editor">Editor</string>
    <string name="font_size">Font Size</string>
    <string name="back_behaviour">Automatically save note on back press</string>
    <string name="features">Features</string>
    <string name="swipe_delete">Swipe to delete note</string>
    <string name="swipe_open">Swipe to open note</string>

    <!-- About -->
    <string name="version">Version</string>
    <string name="fork_on_github">Fork on GitHub</string>
    <string name="author">Author</string>
    <string name="author_name" translatable="false">Digital Construction</string>
    <string name="write_me_an_email">Write me an email</string>
    <string name="app_version" translatable="false">%s (%d)</string>
    <string name="introduction">Introduction</string>
    <string name="license">License</string>

    <!-- Introduction -->
    <string name="app_description">Welcome to a new, modern and beautiful app used to write down notes.</string>
    <string name="swipe">Swipe to open or delete notes</string>
    <string name="swipe_description">You can swipe left to open a note or swipe right to delete them</string>
    <string name="import_and_export">You can import and export notes</string>
    <string name="import_and_export_description">Press the import/export note button to add a note from a stored text file in your phone or save a note as a text file.</string>
    <string name="max_note_name_lines">Double tap a note to expand its name</string>
    <string name="max_note_name_lines_description">If a note\'s name is too long, then it will only show the first three lines, unless you double tap on the note\'s name.</string>
    <string name="get_started">GET STARTED</string>

    <!-- Note Widget Configuration -->
    <string name="accept">Accept</string>
</resources>