<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/theme">

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/dark_mode"
            android:entryValues="@array/dark_mode_values"
            android:key="dark_mode"
            android:title="@string/dark_mode" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/editor">
        <ListPreference
            android:defaultValue="100"
            android:entries="@array/font_size"
            android:entryValues="@array/font_size_values"
            android:key="font_size"
            android:title="@string/font_size" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/features">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="swipe_open"
            android:title="@string/swipe_open" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="swipe_delete"
            android:title="@string/swipe_delete" />
    </PreferenceCategory>

</PreferenceScreen>