<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/sort_order">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/ascending"
                    android:checked="true"
                    android:title="@string/ascending" />
                <item
                    android:id="@+id/descending"
                    android:title="@string/descending" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/import_note"
        android:title="@string/import_note"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/open_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>